log
Thu 14 Sep 2023 07:06:24 PM UTC: 
 tests:  1|8
total_score: 0/70
249a50a
Thu 14 Sep 2023 07:11:29 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:5: error: unknown type name ‘Treemap’; did you mean ‘TreeMap’?
   40 |     Treemap * mapa = (Treemap *)malloc(sizeof(Treemap));
      |     ^~~~~~~
      |     TreeMap
treemap.c:40:23: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   40 |     Treemap * mapa = (Treemap *)malloc(sizeof(Treemap));
      |                       ^~~~~~~
      |                       TreeMap
treemap.c:40:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:40:32: error: expected expression before ‘)’ token
   40 |     Treemap * mapa = (Treemap *)malloc(sizeof(Treemap));
      |                                ^
treemap.c:42:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   42 |     map->root = NULL;
      |     ^~~
      |     mapa
treemap.c:40:15: error: unused variable ‘mapa’ [-Werror=unused-variable]
   40 |     Treemap * mapa = (Treemap *)malloc(sizeof(Treemap));
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
0d981a0
Thu 14 Sep 2023 07:11:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:9: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     if (Treemap == NULL) return NULL;
      |         ^~~~~~~
      |         TreeMap
treemap.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   42 |     map->root = NULL;
      |     ^~~
      |     mapa
treemap.c:40:15: error: unused variable ‘mapa’ [-Werror=unused-variable]
   40 |     TreeMap * mapa = (TreeMap *)malloc(sizeof(TreeMap));
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
69f1b91
Thu 14 Sep 2023 07:13:03 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:9: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     if (Treemap == NULL) return NULL;
      |         ^~~~~~~
      |         TreeMap
treemap.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   42 |     map->root = NULL;
      |     ^~~
      |     mapa
treemap.c:40:15: error: unused variable ‘mapa’ [-Werror=unused-variable]
   40 |     TreeMap * mapa = (TreeMap *)malloc(sizeof(TreeMap));
      |               ^~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
67ddc04
Thu 14 Sep 2023 07:13:14 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:9: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     if (Treemap == NULL) return NULL;
      |         ^~~~~~~
      |         TreeMap
treemap.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:42:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   42 |     map->root = NULL;
      |     ^~~
      |     mapa
Compilation failed
7efd6b7
Thu 14 Sep 2023 07:13:26 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:9: error: ‘Treemap’ undeclared (first use in this function); did you mean ‘TreeMap’?
   41 |     if (Treemap == NULL) return NULL;
      |         ^~~~~~~
      |         TreeMap
treemap.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:43:11: error: ‘TreeMap’ has no member named ‘curent’; did you mean ‘current’?
   43 |     mapa->curent = NULL;
      |           ^~~~~~
      |           current
Compilation failed
58c3020
